--- a/_data/hotel_settings.yml
+++ b/_data/hotel_settings.yml
@@ -1,17 +1,17 @@
-latitude: 40.7507385
-longitude: -73.97681210000002
+---
+latitude: 40.72403
+longitude: -74.00334
 map_zoom: 12
-name: "Paradise Hotel"
-email: "info@traveltripper.com"
-phone_number: "1-212-683-6161"
-  
+name: SIXTY SoHo
+email: sgontu@traveltripper.com
+phone_number: 001-111-1111
 address:
-  city: "New York"
-  country: "United States"
-  state: "NY"
-  street1: "370 Lexington Ave"
-  street2: "Suite 1601"
-  zip_code: "10017"
-  
-_hotel_id: KEY24N #KEY24N, TTDEMO, HODE
-_portal_id: required-but-empty #24northhotel, demo, demohotel
+  street1: 60 Thompson Street, Soho
+  street2: ''
+  state: New York
+  city: New York
+  country: United States
+  zip_code: '10012'
+_hotel_id: SIX821
+_portal_id: required-but-empty
+_root_path: https://rt3api-prd.ttaws.com
